apps/prowlarr/deployment-prowlarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - image: linuxserver/prowlarr:2.6.5
          name: prowlarr
          resources:
            requests:
              memory: 150Mi
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: prowlarr
            - mountPath: /data/Backup
              name: library
              subPath: "arr/prowlarr/backup"
            - mountPath: /downloads
              name: library
              subPath: "downloads"
      hostname: prowlarr
      restartPolicy: Always
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
