apps/prowlarr/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ports:
    - name: "9696"
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
