apps/prowlarr/ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: prowlarr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - prowlarr.almothana.xyz
      secretName: almothana-xyz-tls
